--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   "homepage": "https://github.com/adrbin42/week6_gabble#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
-    "express": "0.0.5",
     "express": "^4.15.3",
     "express-session": "^1.15.5",
     "express-validator": "^3.2.1",
@@ -34,6 +33,7 @@
     "mustache-express": "^1.2.5",
     "path": "^0.12.7",
     "pg": "^7.2.0",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^4.8.0"
   }
 }
